MyPL/tests/negative/err_missing_dot.logic
# Negative: a fact without the trailing '.'
parent(bat, bold)
parent(bold, dorj).
